# fastapi-start

./: pyproject.toml
fastapi_start/: __main__.py
fastapi_start/conf/: __init__.py  global_settings.py
fastapi_start/core/: asgi.py  lifespan.py  typing.py
fastapi_start/core/cli/: __init__.py  file_templates.py
fastapi_start/core/management/: file.py  file_managment.py
fastapi_start/core/management/templates/: manage_py.mako
fastapi_start/core/management/templates/core/: asgi_py.mako  config_toml.mako  dependencies_py.mako  newdependencies_py.mako
fastapi_start/core/management/templates/entities/: entity_py.mako
fastapi_start/core/management/templates/models/: alembic_ini.mako  model_py.mako
fastapi_start/core/management/templates/repositories/: repository_py.mako
fastapi_start/core/management/templates/routes/: __init___py.mako  newinit_py.mako  route_py.mako
fastapi_start/core/management/templates/services/: service_py.mako
fastapi_start/db/: __init__.py  discover.py  mixins.py  models.py  session.py
fastapi_start/dto/: __init__.py
fastapi_start/repositories/: __init__.py  abstract.py  impl.py
fastapi_start/routers/: __init__.py  base.py  cbv.py  utils.py
fastapi_start/services/: __init__.py  base.py
fastapi_start/utils/: file_manager.py  filter.py  module_loading.py  pagination.py  string.py
test_project/routes/: user.py
tests/conf/: test_conf.py
tests/managment/: test_file_system.py  test_structure.py
tests/utils/: test_file_manager.py  test_string.py
